# monbeat-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  core.prd.md  game-optimize.md  node_modules  version2.prd.md
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  doctor-history.jsonl  metrics.json
.gsd/activity/: 001-research-slice-M003-S01.jsonl  002-plan-slice-M003-S01.jsonl  003-execute-task-M003-S01-T01.jsonl  004-execute-task-M003-S01-T02.jsonl  005-complete-slice-M003-S01.jsonl  006-validate-milestone-M003.jsonl  007-complete-milestone-M003.jsonl
.gsd/journal/: 2026-03-23.jsonl
.gsd/milestones/M001/: M001-CONTEXT.md  M001-DISCUSSION.md  M001-ROADMAP.md  M001-SUMMARY.md  M001-VALIDATION.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M001/slices/S02/: S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M001/slices/S03/: S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M001/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M001/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M001/slices/S05/: S05-PLAN.md  S05-RESEARCH.md  S05-SUMMARY.md  S05-UAT.md
.gsd/milestones/M001/slices/S05/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M001/slices/S06/: S06-PLAN.md  S06-RESEARCH.md  S06-SUMMARY.md  S06-UAT.md
.gsd/milestones/M001/slices/S06/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M002/: M002-SUMMARY.md  M002-VALIDATION.md
.gsd/milestones/M002/slices/S01/: S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M002/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M002/slices/S02/: S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M002/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M002/slices/S03/: S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M002/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M002/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M002/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M003/: M003-CONTEXT.md  M003-ROADMAP.md  M003-SUMMARY.md  M003-VALIDATION.md
.gsd/milestones/M003/slices/S01/: S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M003/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M004/: M004-ROADMAP.md
.gsd/milestones/M005/: M005-ROADMAP.md
.gsd/milestones/M006/: M006-ROADMAP.md
.gsd/milestones/M006/slices/S01/: S01-PLAN.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M006/slices/S01/tasks/: T01-PLAN.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M006/slices/S02/: S02-PLAN.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M006/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-VERIFY.json  T03-PLAN.md  T03-SUMMARY.md  T03-VERIFY.json
.gsd/milestones/M006/slices/S03/: S03-PLAN.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M006/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-PLAN.md  T02-SUMMARY.md  T02-VERIFY.json
.gsd/milestones/M006/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M006/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T01-VERIFY.json  T02-SUMMARY.md  T02-VERIFY.json
crates/cli/: Cargo.toml
crates/cli/src/: conflict.rs  main.rs
crates/evm/: Cargo.toml
crates/evm/src/: block_executor.rs  db_bridge.rs  executor.rs  lib.rs  merge.rs
crates/evm/tests/: contract_deploy.rs  nine_fork_integration.rs  parallel_execution.rs  stress.rs  value_transfer.rs
crates/monbeat-server/: Cargo.toml
crates/monbeat-server/migrations/: 001_create_simulations.sql
crates/monbeat-server/src/: api.rs  block_builder.rs  compiler.rs  engine.rs  game_events.rs  lib.rs  main.rs  ws.rs
crates/monbeat-server/tests/: integration_test.rs  ws_integration_test.rs
crates/mv-state/: Cargo.toml
crates/mv-state/src/: lib.rs  mv_database.rs  read_write_sets.rs
crates/nine-fork/: Cargo.toml
crates/nine-fork/src/: lib.rs  mip3_memory.rs  mip4_reserve.rs  nine_fork_precompiles.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: coordinator.rs  lib.rs  parallel_executor.rs  types.rs  worker.rs
crates/state/: Cargo.toml
crates/state/src/: cached_provider.rs  in_memory.rs  lib.rs
crates/types/src/: error.rs  lib.rs  result.rs
