[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/state",
    "crates/evm",
    "crates/precompiles",
]

[workspace.dependencies]
alloy-primitives = { version = "1.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[profile.dev]
opt-level = 1          # slight optimization for faster test execution
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
