[package]
name = "monad-evm"
version = "0.1.0"
edition = "2021"
description = "EVM execution engine for monad-core"

[dependencies]
monad-types = { path = "../types" }
monad-state = { path = "../state" }
alloy-primitives = { workspace = true }
revm = { version = "36", default-features = false, features = [
    "std",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_fee_charge",
] }

[dev-dependencies]
hex = "0.4"
monad-nine-fork = { path = "../nine-fork" }
monad-mv-state = { path = "../mv-state" }
monad-scheduler = { path = "../scheduler" }
